# gh_star_search

./: .gitignore  README.md  pyproject.toml
gh_star_search/: __init__.py  __main__.py  cli.py
gh_star_search/core/: database.py  embedder.py  fetcher.py  searcher.py
gh_star_search/models/: repo.py
gh_star_search/web/: __init__.py  app.py
