[project]
name = "gh-star-search"
version = "0.1.0"
description = "GitHub Star 项目语义搜索工具"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "duckdb>=1.1.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.51.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "numpy>=1.24.0",
]

[project.scripts]
ghstar = "gh_star_search.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gh_star_search"]
